--- a/server_tml/admin.html
+++ b/server_tml/admin.html
@@ -11,7 +11,7 @@
         <b>${message}</b>
     </#if>
     <br /><br />
-    Registered users: ${usersCount} <br />
+    <!--Registered users: ${usersCount} <br />-->
     Signed in users: ${signedInCount}
 </body>
 </html>
