--- a/public_html/phone.html
+++ b/public_html/phone.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BlackJack</title>
     <link rel="stylesheet" type="text/css" href="css/phone.css"/>
     <script src="js/lib/modernizr.js"></script>
