--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,14 +9,14 @@
 <body>
     <script>NProgress.start();</script>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <!--<script>NProgress.inc(0.2);</script>-->
-    <script src="js/build.min.js"></script>
+    <!--&lt;!&ndash;<script>NProgress.inc(0.2);</script>&ndash;&gt;-->
+    <script src="/js/build.min.js"></script>
     <script>
     require(['main'], function(){
     });
     </script>
-    <!--<script data-main="js/main" src="js/build/main.js"></script>-->
-    <!--<script>NProgress.inc(0.4);</script>-->
+    <!--&lt;!&ndash;<script data-main="js/main" src="js/build/main.js"></script>&ndash;&gt;-->
+    <!--&lt;!&ndash;<script>NProgress.inc(0.4);</script>&ndash;&gt;-->
     <script src="//localhost:35729/livereload.js"></script>
     <script>NProgress.done();</script>
 </body>
