deminimize for dev, chips styles

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,11 +10,17 @@
     <script>NProgress.start();</script>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <!--&lt;!&ndash;<script>NProgress.inc(0.2);</script>&ndash;&gt;-->
-    <script src="/js/build.min.js"></script>
-    <script>
-    require(['main'], function(){
-    });
-    </script>
+
+
+    <!--<script src="/js/build.min.js"></script>-->
+    <!--<script>-->
+    <!--require(['main'], function(){-->
+    <!--});-->
+    <!--</script>-->
+
+    <script data-main="js/main" src="js/lib/require.js"></script>
+
+
     <!--&lt;!&ndash;<script data-main="js/main" src="js/build/main.js"></script>&ndash;&gt;-->
     <!--&lt;!&ndash;<script>NProgress.inc(0.4);</script>&ndash;&gt;-->
     <script src="//localhost:35729/livereload.js"></script>
