layout and gameTable model

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,6 +5,7 @@
 	    <title>BlackJack</title>
         <link rel="stylesheet" type="text/css" href="css/nprogress.css" />
         <script src="/js/nprogress.js"></script>
+        <link href='http://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
 	</head>
 <body>
     <script>NProgress.start();</script>
