--- a/public_html/index.html
+++ b/public_html/index.html
@@ -24,7 +24,7 @@
 
     <!--&lt;!&ndash;<script data-main="js/main" src="js/build/main.js"></script>&ndash;&gt;-->
     <!--&lt;!&ndash;<script>NProgress.inc(0.4);</script>&ndash;&gt;-->
-    <script src="//localhost:35729/livereload.js"></script>
-    <script>NProgress.done();</script>
+    <!--<script src="//localhost:35729/livereload.js"></script>-->
+    <!--<script>NProgress.done();</script>-->
 </body>
 </html>
