--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,13 +13,13 @@
     <!--&lt;!&ndash;<script>NProgress.inc(0.2);</script>&ndash;&gt;-->
 
 
-    <!--<script src="/js/build.min.js"></script>-->
-    <!--<script>-->
-    <!--require(['main'], function(){-->
-    <!--});-->
-    <!--</script>-->
+    <script src="/js/build.min.js"></script>
+    <script>
+    require(['main'], function(){
+    });
+    </script>
 
-    <script data-main="js/main" src="js/lib/require.js"></script>
+    <!--<script data-main="js/main" src="js/lib/require.js"></script>-->
 
 
     <!--&lt;!&ndash;<script data-main="js/main" src="js/build/main.js"></script>&ndash;&gt;-->
